# panda

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md
plans/panda/: panda_001.md
scripts/: build_tokenizer.py  encode.py  pretokenize.py
src/: codec.py  codec_io.py  config.py  constants.py  data.py  eval.py  infer.py  model.py  train.py
src/tokenizer/: tokenizer.json  tokenizer_config.json
