[project]
name = "panda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.4",
    "huggingface-hub>=1.7.2",
    "librosa>=0.11.0",
    "pydub>=0.25.1",
    "regex>=2026.2.28",
    "snac>=1.2.1",
    "tokenizers>=0.22.2",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
]
